[B]Version 2.1.0 - 2012-02-15[/B]
- Introduced usage of script.module.buggalo for improved error handling
  with option for the user to submit exceptions/bugs
- Added support for some radio content
- Added support for Recently added
- Fixed problem with missing Editors favourites (once again)

[B]Version 2.0.0 - 2011-07-28[/B]
- Removed support for Dharma
- Otherwise same changes as 1.1.0

[B]Version 1.1.0 - 2011-07-28[/B]
- Removed dependency on script.module.danishaddons
- Fixed problem with missing Editors favourites

[B]Version 1.0.6[/B]
- Prepare for official XBMC repository

[B]Version 1.0.5[/B]
- Updated to danishaddons module 1.1.0

[B]Version 1.0.4[/B]
- Fixed patching of RTMP URL

[B]Version 1.0.3[/B]
- Decode HTML entities in title, description, etc.

[B]Version 1.0.2[/B]
- Updated to use script.module.simplejson

[B]Version 1.0.1[/B]
- Fixed parsing and display of clip duration
- Now uses library module for Danish addons

[B]Version 1.0.0[/B]
- Initial version